<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/filters"
            android:textColor="#081A2C"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_close_grey"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collaborator"
        android:textSize="12sp"
        android:textColor="#081A2C"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomDropDownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp">

        <AutoCompleteTextView
            android:id="@+id/collaboratorInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:paddingVertical="14dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client"
        android:textSize="12sp"
        android:textColor="#081A2C"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomDropDownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp">

        <AutoCompleteTextView
            android:id="@+id/clientInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:paddingVertical="14dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capillary_prothesis"
        android:textColor="#081A2C"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:textSize="13sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomDropDownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp">

        <AutoCompleteTextView
            android:id="@+id/prothesisType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:paddingVertical="14dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_type"
        android:textColor="#081A2C"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:textSize="13sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomDropDownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp">

        <AutoCompleteTextView
            android:id="@+id/customerServiceType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:paddingVertical="14dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/errorMessageTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Preencha todos os campos"
        android:textColor="#BB2525"
        android:textSize="13sp"
        android:visibility="invisible"
        tools:visibility="invisible"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCleanFilter"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_button_background"
            android:backgroundTint="@color/Grey"
            android:layout_weight="1"
            android:text="@string/clean" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddFilter"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_button_background"
            android:backgroundTint="@color/Quaternary"
            android:layout_weight="1"
            android:text="@string/search" />

    </LinearLayout>

</LinearLayout>